# sample-flask-sam-app

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
lambda_handler/: app.py
tests/: conftest.py
tests/unit/: test_app.py  test_handler.py
